--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -50,6 +50,12 @@
 
 .intro-background{
     background: #5c2431;
+    padding-bottom: 6rem;
+    padding-top: 6rem;
+}
+
+.contactanos-home li{
+    font-size: 1.2rem !important;
 }
 
 @media (max-width: 1023px) {
