--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,4 +1,3 @@
-
 .intro .column {
     display: flex;
     align-items: center;
@@ -6,13 +5,13 @@
     flex-direction: column;
 }
 
-.intro.container{
+.intro.container {
     display: flex;
     justify-content: center;
 }
 
 
-.intro .columns{
+.intro .columns {
     min-height: 600px;
 }
 
@@ -48,36 +47,94 @@
     color: rgb(180, 180, 180);
 }
 
-.intro-background{
+.intro-background {
     background: #5c2431;
     padding-bottom: 6rem;
     padding-top: 6rem;
 }
 
-.contactanos-home li{
+.contactanos-home li {
     font-size: 1.2rem !important;
 }
 
-@media (max-width: 1023px) {
-    .intro .columns{
-        min-height: 400px;
-        padding: 0 2rem; 
+@media (max-width: 1279px) {
+
+    .video-intro video {
+        width: 100% !important;
+        height: 100% !important;
     }
+
+}
+
+@media (max-width: 1023px) {
+    .intro .columns {
+        min-height: 400px;
+        padding: 0 2rem;
+    }
+
+    .intro .columns-2.d-flex-center {
+        gap: 20px
+    }
+
+    .video-intro video {
+        border-radius: 0%;
+    }
+
+    .column-card{
+        display: block;
+    }
+
+
+
+
+
+    
 }
 
 @media (max-width: 991px) {
-    .intro .column .title{
+    .intro .column .title {
         font-size: 2.5rem;
     }
 }
 
 @media (max-width: 768px) {
+
     .intro .title,
     .intro .column div {
         text-align: center;
     }
 
-    .intro .columns{
-        padding: 0rem; 
+    .intro .columns {
+        padding: 0rem;
     }
+
+    .intro h1,
+    .intro h2 {
+        text-align: center;
+    }
+
+    .intro-background{
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    .video-intro video {
+        border-radius: 50%;
+        width: 50% !important;
+    }
+
+    .intro .columns-2.d-flex-center{
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 639px){
+    .intro h1{
+        font-size: 2rem;
+    }
+    .intro h2 {
+        font-size: 1.25rem;
+        line-height: 1.6rem;
+    }
+
 }
