--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,6 +7,11 @@
     height: 7.5rem;
 }
 
+@media (max-width: 991px){
+    .flow-root{
+        text-align: center;
+    }
+}
 
 
 @media (max-width: 639px){
