Legado a futuras generaciones imagen a la derecha

--- a/src/components/tipo-libro/tipo-libro.css
+++ b/src/components/tipo-libro/tipo-libro.css
@@ -119,7 +119,8 @@
 }
 
 
-.column-card:nth-child(1) .img-box img {
+.column-card:nth-child(1) .img-box img,
+.cards-section:nth-child(1) .contenedor_tarjeta img.fluid {
     object-position: right;
 }
 
