--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -73,6 +73,20 @@
   border-top: 0;
   background: #e9e9e9;
 }
+
+.item-faq:nth-child(2) .title{
+  border-radius: 0 0 15px 15px;
+}
+
+
+.item-faq:nth-child(2) .content{
+  margin-top: -15px;
+}
+
+.item-faq:nth-child(2) .content p{
+  padding-top: 45px;
+}
+
 .accordion .content p {
   padding: 30px 0;
   margin: 0;
