--- a/src/components/tipo-libro/tipo-libro.css
+++ b/src/components/tipo-libro/tipo-libro.css
@@ -275,6 +275,12 @@
     figure .frontal {
         display: block;
         backface-visibility: hidden;
+        -webkit-perspective: 0;
+        -webkit-backface-visibility: hidden;
+        -webkit-transform: translate3d(0,0,0);
+        visibility:visible;
+        backface-visibility: hidden;
+
     }
 
 
@@ -284,6 +290,10 @@
         padding: 20px;
         color: #fff;
         transform: perspective(600px) rotateY(180deg);
+        backface-visibility: hidden;
+        -webkit-perspective: 0;
+        -webkit-backface-visibility: hidden;
+        visibility:visible;
         backface-visibility: hidden;
         overflow: hidden;
         display: flex;
