--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,10 @@
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
   }
 }
