--- a/src/components/clientes-accordion/clientes-accordion.css
+++ b/src/components/clientes-accordion/clientes-accordion.css
@@ -15,6 +15,7 @@ section.clientes-accordion {
     align-items: flex-end;
     opacity: 0.9;
     transition: 0.5s;
+    -webkit-transition: 0.5s;
 }
 
 .clientes-accordion h2,
@@ -62,6 +63,7 @@ section.clientes-accordion {
     gap: 14px;
     background: linear-gradient(to bottom, rgb(0 0 0 / 0%), rgb(0 0 0 / 100%));
     transition: 0.25s;
+    -webkit-transition: 0.25s;
 }
 
 .clientes-accordion article.active .content {
@@ -94,6 +96,7 @@ section.clientes-accordion {
     padding: 1.5em;
     will-change: filter;
     transition: filter 300ms;
+    -webkit-transition: filter 300ms;
 }
 
 .clientes-accordion .logo:hover {
@@ -107,10 +110,12 @@ section.clientes-accordion {
 @keyframes logo-spin {
     from {
         transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
     }
 
     to {
         transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
     }
 }
 
