--- a/src/hover-buttons.css
+++ b/src/hover-buttons.css
@@ -38,6 +38,7 @@
   overflow: hidden;
   z-index: 1;
   transition: 0.5s;
+  -webkit-transition: 0.5s;
   padding: 0.5rem 1rem;
 }
 
@@ -58,10 +59,13 @@
   width: 25%;
   height: 100%;
   transform: translateY(150%);
+  -webkit-transform: translateY(150%);
   border-radius: 50%;
   left: calc((var(--n) - 1) * 25%);
   transition: 0.5s;
+  -webkit-transition: 0.5s;
   transition-delay: calc((var(--n) - 1) * 0.1s);
+  -webkit-transition-delay: calc((var(--n) - 1) * 0.1s);
   z-index: -1;
 
 }
@@ -101,6 +105,7 @@
 
 .button-creative ul li:hover span {
   transform: translateY(0) scale(2);
+  -webkit-transform: translateY(0) scale(2);
 }
 
 .button-creative ul li span:nth-child(1) {
