--- a/src/App.css
+++ b/src/App.css
@@ -32,9 +32,11 @@
   from {
     transform: rotate(0deg);
     -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
   }
 }
