--- a/src/components/clientes-accordion/clientes-accordion.css
+++ b/src/components/clientes-accordion/clientes-accordion.css
@@ -16,6 +16,7 @@ section.clientes-accordion {
     opacity: 0.9;
     transition: 0.5s;
     -webkit-transition: 0.5s;
+    -ms-transition: 0.5s;
 }
 
 .clientes-accordion h2,
@@ -64,6 +65,7 @@ section.clientes-accordion {
     background: linear-gradient(to bottom, rgb(0 0 0 / 0%), rgb(0 0 0 / 100%));
     transition: 0.25s;
     -webkit-transition: 0.25s;
+    -ms-transition: 0.25s;
 }
 
 .clientes-accordion article.active .content {
@@ -97,6 +99,7 @@ section.clientes-accordion {
     will-change: filter;
     transition: filter 300ms;
     -webkit-transition: filter 300ms;
+    -ms-transition: filter 300ms;
 }
 
 .clientes-accordion .logo:hover {
@@ -111,11 +114,13 @@ section.clientes-accordion {
     from {
         transform: rotate(0deg);
         -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
     }
 
     to {
         transform: rotate(360deg);
         -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
     }
 }
 
