--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -20,6 +20,7 @@
   color: white;
   transition: 0.5s;
   -webkit-transition: 0.5s;
+  -ms-transition: 0.5s;
 }
 
 .accordion {
@@ -37,6 +38,7 @@
   cursor: pointer;
   transform: translate3d(0, 0, 0);
   -webkit-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
   color: white;
   position: relative;
   font-size: 20px;
@@ -53,6 +55,7 @@
   color: white;
   transition: transform 0.5s ease-in-out;
   -webkit-transition: transform 0.5s ease-in-out;
+  -ms-transition: transform 0.5s ease-in-out;
   position: absolute;
   right: 30px;
   font-family: monospace;
@@ -61,18 +64,21 @@
 .accordion .title.is-expanded {
   transition: background 0.5s;
   -webkit-transition: background 0.5s;
+  -ms-transition: background 0.5s;
   background: #5c2332;
 }
 .accordion .title.is-expanded::after {
   content: "-";
   transform: rotate(-360deg);
   -webkit-transform: rotate(-360deg);
+  -ms-transform: rotate(-360deg);
 }
 .accordion .content {
   overflow: hidden;
   max-height: 0;
   transition: max-height 0.5s;
   -webkit-transition: max-height 0.5s;
+  -ms-transition: max-height 0.5s;
   margin: 0;
   padding: 0 30px;
   border: solid 1px #eeeeee;
@@ -99,6 +105,7 @@
   opacity: 0;
   transition: 0.5s;
   -webkit-transition: 0.5s;
+  -ms-transition: 0.5s;
   font-size: 1.1rem;
   font-weight: 500;
 }
