--- a/src/components/tipo-libro/tipo-libro.css
+++ b/src/components/tipo-libro/tipo-libro.css
@@ -21,8 +21,10 @@
     border-radius: 20px;
     transition: 0.5s;
     -webkit-transition: 0.5s;
+    -ms-transition: 0.5s;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
     -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+    -ms-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
     flex: 33% 1;
 }
 
@@ -49,6 +51,7 @@
     overflow: hidden;
     transition: 0.5s;
     -webkit-transition: 0.5s;
+    -ms-transition: 0.5s;
 }
 
 .container-tipo-libro .card:hover .img-box {
@@ -68,6 +71,7 @@
     overflow: hidden;
     transition: 0.5s;
     -webkit-transition: 0.5s;
+    -ms-transition: 0.5s;
 }
 
 .container-tipo-libro .card .content {
@@ -252,10 +256,13 @@
         position: relative;
         transition: all ease .5s;
         -webkit-transition: all ease .5s;
+        -ms-transition: all ease .5s;
         transform-style: preserve-3d;
         -webkit-transform-style: preserve-3d;
+        -ms-transform-style: preserve-3d;
         transform: perspective(600px) rotateY(0deg);
         -webkit-transform: perspective(600px) rotateY(0deg);
+        -ms-transform: perspective(600px) rotateY(0deg);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -277,6 +284,7 @@
         border-radius: 5px;
         transition: all ease .5s;
         -webkit-transition: all ease .5s;
+        -ms-transition: all ease .5s;
     }
 
     .frontal h4 {
@@ -288,12 +296,18 @@
         display: block;
         perspective: 0;
         -webkit-perspective: 0;
+        -ms-perspective: 0;
         transform: translate3d(0, 0, 0);
         -webkit-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
         visibility: visible;
+        -webkit-visibility: visible;
+        -ms-visibility: visible;
         -webkit-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
         backface-visibility: hidden;
         -webkit-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
     }
 
 
@@ -304,13 +318,19 @@
         color: #fff;
         transform: perspective(600px) rotateY(180deg);
         -webkit-transform: perspective(600px) rotateY(180deg);
+        -ms-transform: perspective(600px) rotateY(180deg);
         backface-visibility: hidden;
         perspective: 0;
         -webkit-perspective: 0;
+        -ms-perspective: 0;
         -webkit-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
         visibility: visible;
+        -webkit-visibility: visible;
+        -ms-visibility: visible;
         overflow: hidden;
         -webkit-overflow: hidden;
+        -ms-overflow: hidden;
         display: flex;
         align-content: center;
         align-items: center;
@@ -324,6 +344,10 @@
     figure .trasera p {
         color: #1e2128;
         font-weight: 400;
+        opacity: 1;
+        visibility: visible;
+        -webkit-visibility: visible;
+        -ms-visibility: visible;
     }
 
     .contenedor_tarjeta:hover figure {
@@ -345,6 +369,7 @@
 
     .cards-section .contenedor_tarjeta figure {
         -webkit-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
+        -ms-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
         -moz-box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
         box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.25);
     }
