--- a/src/components/tipo-libro/tipo-libro.css
+++ b/src/components/tipo-libro/tipo-libro.css
@@ -248,9 +248,9 @@ section#tipo-libros{
         width: 100%;
         height: 100%;
         border-radius: 5px;
-        transition: all ease .5s;
-        -webkit-transition: all ease .5s;
-        -ms-transition: all ease .5s;
+        transition: opacity all ease .5s;
+        -webkit-transition: opacity all ease .5s;
+        -ms-transition: opacity all ease .5s;
     }
 
     .frontal h4 {
@@ -274,6 +274,8 @@ section#tipo-libros{
         backface-visibility: hidden;
         -webkit-backface-visibility: hidden;
         -ms-backface-visibility: hidden;
+        -webkit-transition: opacity 0.5s;
+        transition: opacity 0.5s;
     }
 
 
@@ -294,6 +296,8 @@ section#tipo-libros{
         visibility: visible;
         -webkit-visibility: visible;
         -ms-visibility: visible;
+        -webkit-transition: opacity 0.5s;
+        transition: opacity 0.5s;
         overflow: hidden;
         -webkit-overflow: hidden;
         -ms-overflow: hidden;
@@ -314,6 +318,8 @@ section#tipo-libros{
         visibility: visible;
         -webkit-visibility: visible;
         -ms-visibility: visible;
+        -webkit-transition: opacity 0.5s;
+        transition: opacity 0.5s;
     }
 
     .contenedor_tarjeta:hover figure {
