--- a/src/components/tipo-libro/tipo-libro.css
+++ b/src/components/tipo-libro/tipo-libro.css
@@ -248,9 +248,9 @@ section#tipo-libros{
         width: 100%;
         height: 100%;
         border-radius: 5px;
-        transition: opacity all ease .5s;
-        -webkit-transition: opacity all ease .5s;
-        -ms-transition: opacity all ease .5s;
+        transition: opacity .5s ease-out;
+        -webkit-transition: opacity .5s ease-out;
+        -ms-transition: opacity .5s ease-out;
     }
 
     .frontal h4 {
@@ -274,8 +274,8 @@ section#tipo-libros{
         backface-visibility: hidden;
         -webkit-backface-visibility: hidden;
         -ms-backface-visibility: hidden;
-        -webkit-transition: opacity 0.5s;
-        transition: opacity 0.5s;
+        -webkit-transition: opacity 0.5s ease-out;
+        transition: opacity 0.5s ease-out;
     }
 
 
@@ -296,8 +296,8 @@ section#tipo-libros{
         visibility: visible;
         -webkit-visibility: visible;
         -ms-visibility: visible;
-        -webkit-transition: opacity 0.5s;
-        transition: opacity 0.5s;
+        -webkit-transition: opacity 0.5s ease-out;
+        transition: opacity 0.5s ease-out;
         overflow: hidden;
         -webkit-overflow: hidden;
         -ms-overflow: hidden;
@@ -318,8 +318,8 @@ section#tipo-libros{
         visibility: visible;
         -webkit-visibility: visible;
         -ms-visibility: visible;
-        -webkit-transition: opacity 0.5s;
-        transition: opacity 0.5s;
+        -webkit-transition: opacity 0.5s ease-out;
+        transition: opacity 0.5s ease-out;
     }
 
     .contenedor_tarjeta:hover figure {
