--- a/src/components/tipo-libro/tipo-libro.css
+++ b/src/components/tipo-libro/tipo-libro.css
@@ -218,7 +218,6 @@ section#tipo-libros{
     }
 
     figure {
-        margin: 0;
         position: relative;
         transition: all ease .5s;
         -webkit-transition: all ease .5s;
@@ -226,9 +225,6 @@ section#tipo-libros{
         transform-style: preserve-3d;
         -webkit-transform-style: preserve-3d;
         -ms-transform-style: preserve-3d;
-        transform: perspective(600px) rotateY(0deg);
-        -webkit-transform: perspective(600px) rotateY(0deg);
-        -ms-transform: perspective(600px) rotateY(0deg);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -239,18 +235,11 @@ section#tipo-libros{
         margin: auto;
     }
 
-    .contenedor_tarjeta:hover figure img {
-        filter: blur (2px);
-    }
-
     figure .frontal,
     figure .trasera {
         width: 100%;
         height: 100%;
         border-radius: 5px;
-        transition: opacity .5s ease-out;
-        -webkit-transition: opacity .5s ease-out;
-        -ms-transition: opacity .5s ease-out;
     }
 
     .frontal h4 {
@@ -259,23 +248,9 @@ section#tipo-libros{
     }
 
     figure .frontal {
-        display: block;
-        perspective: 0;
-        -webkit-perspective: 0;
-        -ms-perspective: 0;
-        transform: translate3d(0, 0, 0);
-        -webkit-transform: translate3d(0, 0, 0);
-        -ms-transform: translate3d(0, 0, 0);
-        visibility: visible;
-        -webkit-visibility: visible;
-        -ms-visibility: visible;
         -webkit-backface-visibility: hidden;
         -ms-backface-visibility: hidden;
         backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
-        -ms-backface-visibility: hidden;
-        -webkit-transition: opacity 0.5s ease-out;
-        transition: opacity 0.5s ease-out;
     }
 
 
@@ -288,19 +263,8 @@ section#tipo-libros{
         -webkit-transform: perspective(600px) rotateY(180deg);
         -ms-transform: perspective(600px) rotateY(180deg);
         backface-visibility: hidden;
-        perspective: 0;
-        -webkit-perspective: 0;
-        -ms-perspective: 0;
         -webkit-backface-visibility: hidden;
         -ms-backface-visibility: hidden;
-        visibility: visible;
-        -webkit-visibility: visible;
-        -ms-visibility: visible;
-        -webkit-transition: opacity 0.5s ease-out;
-        transition: opacity 0.5s ease-out;
-        overflow: hidden;
-        -webkit-overflow: hidden;
-        -ms-overflow: hidden;
         display: flex;
         align-content: center;
         align-items: center;
@@ -308,6 +272,7 @@ section#tipo-libros{
         line-height: 1.5;
         font-weight: 500;
         border-radius: 20px !important;
+        opacity: 2;
     }
 
 
@@ -315,11 +280,10 @@ section#tipo-libros{
         color: #1e2128;
         font-weight: 400;
         opacity: 1;
+        opacity: 2;
+        -webkit-transition: opacity 0.6s;
+        transition: opacity 0.6s;
         visibility: visible;
-        -webkit-visibility: visible;
-        -ms-visibility: visible;
-        -webkit-transition: opacity 0.5s ease-out;
-        transition: opacity 0.5s ease-out;
     }
 
     .contenedor_tarjeta:hover figure {
@@ -327,6 +291,10 @@ section#tipo-libros{
         -ms-transform: perspective(600px) rotateY(180deg);
         -o-transform: perspective(600px) rotateY(180deg);
         transform: perspective(600px) rotateY(180deg);
+        opacity:1;
+        visibility:visible;
+        -webkit-transition: opacity 0.5s;
+        transition: opacity 0.5s;
     }
 
     .cards-section {
